--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,1 +1,47 @@
-<p>por-pais works!</p>
+
+
+<h2>Por Pais</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <form autocomplete="off">
+            <input class="form-control"
+                type="text"
+                name="termino"
+                [(ngModel)]="termino"
+                placeholder="Buscar por pais..."/>
+        </form>
+    </div>
+</div>
+
+<hr>
+
+<div class="alert alert-danger">
+    No se encontro nada con el termino de busqueda
+</div>
+
+<div class="row">
+    <div class="col">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Nombre</th>
+                    <th>Pais</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>#</td>
+                    <td>Nombre</td>
+                    <td>Pais</td>
+                    <td>
+                        <a href="">ver mas</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
