--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -5,7 +5,8 @@
 
 <div class="row">
     <div class="col">
-        <form autocomplete="off">
+        <form autocomplete="off"
+        (ngSubmit)="buscar()">
             <input class="form-control"
                 type="text"
                 name="termino"
@@ -17,11 +18,12 @@
 
 <hr>
 
-<div class="alert alert-danger">
-    No se encontro nada con el termino de busqueda
+
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontro nada con el termino de busqueda {{termino}}
 </div>
 
-<div class="row">
+<div *ngIf="!hayError" class="row">
     <div class="col">
         <table class="table table-hover">
             <thead>
