--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -5,14 +5,11 @@
 
 <div class="row">
     <div class="col">
-        <form autocomplete="off"
-        (ngSubmit)="buscar()">
-            <input class="form-control"
-                type="text"
-                name="termino"
-                [(ngModel)]="termino"
-                placeholder="Buscar por pais..."/>
-        </form>
+        <app-pais-input 
+        (onEnter)="buscar($event)" 
+        (onDebounce)="sugerencias($event)"
+        placeholder="Buscar Pais"
+        ></app-pais-input>
     </div>
 </div>
 
@@ -23,27 +20,8 @@
     No se encontro nada con el termino de busqueda {{termino}}
 </div>
 
-<div *ngIf="!hayError" class="row">
+<div *ngIf="paises.length > 0" class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Nombre</th>
-                    <th>Pais</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>#</td>
-                    <td>Nombre</td>
-                    <td>Pais</td>
-                    <td>
-                        <a href="">ver mas</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+       <app-pais-table [paises]="paises" ></app-pais-table>
     </div>
 </div>
